Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <!-- Write your HTML in this file -->
-
+<!doctype html>
+<html>
+  <head>"Hello World!"</head>
+  <body></body>"Hello World!"</body>
+</html>
