--- a/index.html
+++ b/index.html
@@ -2,5 +2,5 @@
 <!doctype html>
 <html>
   <head>"Hello World!"</head>
-  <body></body>"Hello World!"</body>
+  <body>"Hello World!"</body>
 </html>
