--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!-- Write your HTML in this file -->
 <!doctype html>
 <html>
-  <head>"Hello World!"</head>
-  <body>"Hello World!"</body>
+  <head>
+    <title>Hello World</title>
+  </head>
+  <body>Hello, World</body>
 </html>
