--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link = https://flatironschool.com/
     <title>Hello World</title>
   </head>
   <body>Hello, World</body>
