--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <link = https://flatironschool.com/
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
     <title>Hello World</title>
   </head>
   <body>Hello, World</body>
